<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/signup_appbar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/black">
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:id="@+id/login_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_appbar"
        android:layout_marginStart="@dimen/paddingMedium"
        android:layout_marginTop="@dimen/paddingMedium"
        android:layout_marginBottom="@dimen/paddingMedium"
        android:text="@string/login_description"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <LinearLayout
        android:id="@+id/login_email_layout"
        android:layout_below="@+id/login_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/paddingMedium"
        android:layout_marginTop="@dimen/paddingLarge"
        >
        <ImageView
            android:layout_width="@dimen/iconMedium"
            android:layout_height="@dimen/iconMedium"
            android:src="@drawable/outline_email_24"
            android:importantForAccessibility="no" />
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:hint="@string/signup_email"
            android:layout_height="48dp"
            tools:ignore="VisualLintTextFieldSize" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/login_password_layout"
        android:layout_below="@+id/login_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/paddingMedium"
        android:layout_marginTop="@dimen/paddingLarge"
        >
        <ImageView
            android:layout_width="@dimen/iconMedium"
            android:layout_height="@dimen/iconMedium"
            android:src="@drawable/ic_password"
            android:importantForAccessibility="no" />
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:hint="@string/signup_password"
            android:layout_height="48dp"
            tools:ignore="VisualLintTextFieldSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forgot_password_layout"
        android:layout_below="@+id/login_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/paddingMedium"
        android:layout_marginTop="@dimen/paddingLarge"
        android:gravity="end"
        >
        <Button
            android:id="@+id/forgot_password_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            android:textColor="@color/purple_500"
            />
    </LinearLayout>
    <Button
        android:id="@+id/login_button"
        android:layout_below="@+id/forgot_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/paddingMedium"
        android:layout_marginTop="@dimen/paddingXLarge"
        android:text="@string/login"
        android:background="@color/black"
        android:textColor="@color/white"
        />
    <LinearLayout
        android:id="@+id/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_marginTop="@dimen/paddingXLarge"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dpes_not_have_account"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        <Button
            android:id="@+id/signup_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="16sp"
            android:textColor="@color/purple_500"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/or_layout"
        android:layout_below="@+id/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/paddingXLarge"
        android:layout_marginHorizontal="@dimen/paddingMedium"
        android:gravity="center_vertical"
        >
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:dividerInsetStart="16dp"
            app:dividerInsetEnd="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or" />
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetStart="16dp"
            app:dividerInsetEnd="16dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/or_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/paddingMedium"
        android:layout_marginTop="@dimen/paddingXLarge"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_facebook"/>
        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:gravity="center"
            android:text="@string/login_with_facebook"
            android:textSize="12sp"
            android:textColor="@color/purple_700"
            />
    </LinearLayout>

</RelativeLayout>